--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,10 +12,6 @@
 .top{
     width: 100%;
     min-height: 100vh;
-    background: url(../imagens/guus-baggermans-cg599DTeS8w-unsplash.jpg)no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -128,7 +124,7 @@
     align-items: center;
     flex-wrap: wrap;
     margin: 0 auto;
-    background: url(../imagens/tommy-van-kessel-ZPRBeg7Lsh0-unsplash.jpg)no-repeat;
+    background: url(../imagens/john-karlo-mendoza-idzUojjazCg-unsplash.jpg)no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -155,7 +151,7 @@
     background-color: goldenrod;
     width:400px;
     height: 80vh;
-    opacity: 0.8;
+    opacity: 0.5;
     margin-bottom: 10px;
 }
 .imgSobre img{
@@ -163,59 +159,90 @@
     height: 100%;
     object-fit:cover ;
 }
+/*              Galeria                 */
+.galeria{
+    width: 100%;
+    min-height: 50vh;
+    padding: 50px 0 ;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.galeria h1{
+    color: #fff;
+    font-size: 60px;
+    margin-bottom: 30px;
+}
+.gradeImg{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    justify-content: space-around;
+}
+.boxImg {
+    width: 100vmin;
+    max-width: 230px;
+    min-height: 50vh;
+    
+}
+.boxImg  img{
+    width: 100%;
+    height: 100%;
+    
+}
+
+
+
 /*          localização         */
 .localizacao{
     max-width: 100%;
-    min-height: 100vh;
-    margin: 0 auto;
+    min-height:50vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgb(0,0,0);
-    background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(29,29,29,1) 97%);
+    background: url(../imagens/jason-leung-2seUdPQNy_I-unsplash.jpg)no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    padding: 50px 0 ;
 
-}
-.interior{
-    max-width: 400px;
-    height:90vh;
-}
-.interior img{
-    width: 100%;
-    height: 100%;
-}
-.map{
-    max-width: 100%;
-    height:90vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
 }
 .mapText{
     color: #fff;
-    width: 100%;
-    height: 200px;
+    max-width: 300px;
+    height: 50vh;
     font-size: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center; 
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 30, 85, 0.5);
+    position: relative;
 }
 .mapText span{
     width: 90%;
     height: 100px;
 }
 .mapBox{
+    background-color: yellowgreen;
     width: 100vmin;
+    max-width: 800px;
+    height: 50vh;
     opacity: 0.4;
+    position: relative;
 }
 .mapBox:hover{
     opacity: 0.9;
 }
 .mapBox iframe{
-   width: 100%;
-   max-height:500px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+   
    
 
     
@@ -304,10 +331,6 @@ footer{
     font-size: 30px;
 }
 
-
-
-
-
 @media (max-width:999px) {
     
     .textSobre{
@@ -317,18 +340,18 @@ footer{
         max-width: 150px;
     }
     .localizacao{
+        min-height: 120vh;
         flex-wrap: wrap;
-        background: url(../imagens/jason-leung-2seUdPQNy_I-unsplash.jpg)no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        background-position: center;
+        flex-direction:column;
     
     }
     .interior{
         display: none;
     }
     .mapBox{
-        width: 100vmin;
+        width: 90%;
+        height: 60vh;
         opacity: 0.7;
     }
 }
+
