--- a/CSS/swiperStyle.css
+++ b/CSS/swiperStyle.css
@@ -58,7 +58,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: bottom;
+    object-position: center;
   }
   .topImg{
     width: 100%;
