--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,21 +38,27 @@
     align-items: center;
     flex-direction: column;
     background-color: rgba(0,0,0,0.5);
+    padding: 50px 0;
+}
+.horarios{
+    width: 100%;
+    display: flex;
+    justify-content:center;
+    align-items: center;
 }
 .horarios ul{
-    width: 100%;
+    width: 90%;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    gap: 30px;
 }
 .horarios ul li{
     list-style: none;
  
 }
 .horarios ul li span{
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     color: rgb(255, 153, 0);
     font-size: 20px;
     text-align: center;
@@ -61,12 +67,13 @@
     align-items: center;
 }
 .hora{
-    width: 120px;
-    height: 120px;
+    width: 90px;
+    height: 90px;
     display: flex;
     justify-content:center;
     align-items: center;
-    font-size: 20px;    
+    text-align: center;
+    font-size: 15px;    
     color: rgb(204, 204, 204);
     background: rgba(255, 145, 0, 0.637);
     box-shadow: 0 0 5px rgba(0, 0, 0,0.9);
