--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,8 +3,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Monoton', cursive;
+    
+    font-family: Painter ;
     word-spacing: 5px;
+}
+@font-face {
+    font-family: 'Painter' ;
+    src: url('../font/gendis_script/Gendis\ Script\ Test.ttf');
 }
 .container{
     width: 100%;
@@ -43,32 +48,32 @@
 }
 .card{
     max-width: 250px;
-    height: 300px;
+    height: 420px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
+    padding: 20px 0;
     margin: 10px;
     background: rgb(105,105,105);
     background: linear-gradient(180deg, rgba(105, 105, 105, 0.7) 0%, rgba(65, 65, 65, 0.7) 50%, rgba(0, 0, 0, 0.7) 100%);
     box-shadow: 0 0 10px rgba(0, 0, 0,0.9);
 }
-.boxCard .card ion-icon{
-    font-size: 60px;
-    color: #fff;
-    margin: 10px;
+.card img{
+    width: 60%;
 }
+
 .cardTitulo{
     color: #fff;
     text-align: justify;
     margin: 10px auto;
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
 }
 .cardText{
     width: 90%;
     color: #fff;
-    font-size: 15px;
+    font-size: 25px;
     text-align: center;
 }
 /*              sobre               */
@@ -100,7 +105,7 @@
 }
 .textSobre span{
     width: 90%;
-    font-size: 20px;
+    font-size: 30px;
     line-height: 30px;
     text-align: justify;
 }
@@ -129,7 +134,7 @@
 }
 .galeria h1{
     color: #fff;
-    font-size: 60px;
+    font-size: 80px;
     margin-bottom: 30px;
 }
 .gradeImg{
@@ -169,7 +174,7 @@
     
     width: 100%;
     height: 100px;
-    font-size: 20px;
+    font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -211,6 +216,28 @@
     width: 100%;
     height:91vh;
 }
+/* whatsapp */
+.whatsapp{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: rgba(75, 95, 35, 0.507);
+    color: #ff9900;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 70px;
+    z-index: 100;
+}
+.whatsapp img{
+    width: 60px;
+}
+
+
+
+
+/* Contato */
 form{
     width: 100%;
     max-width: 450px;
@@ -235,10 +262,11 @@ form input{
 .radio input{
     display: inline-block;
 }
-.radio label{
+label{
     
     width: 150px;
     display: inline-block;
+    font-size: 30px;
 }
 .textArea{
     width: 90%;
@@ -249,7 +277,7 @@ form input{
 .btEnviar{
     background-color: #e51e2a;
     color: #fff;
-    font-size: 30px;
+    font-size: 50px;
 }
 /*          Footer              */
 
@@ -260,7 +288,8 @@ footer{
     justify-content: center;
     align-items: center;
     position: relative;
-    background: black;
+    background: rgb(0, 0, 0);
+    padding: 40px 0;
 }
 .logo{
     position: absolute;
@@ -279,11 +308,11 @@ footer{
 }
 .contato h1 {
     color: rgb(255, 255, 255);
-    font-size: 40px;
+    font-size: 70px;
 }
 .contato h2 {
     color: rgb(255, 255, 255);
-    font-size: 20px;
+    font-size: 40px;
     margin: 20px;
 }
 .contato a {
@@ -309,20 +338,24 @@ footer{
 }
 .sci li{
    list-style: none;
+   margin: 30px;
+}
+.sci li a img{
+    border-radius: 50%;
+    box-shadow:0 0 50px #ffffff;
+    
 }
 .sci a {
     text-decoration: none;
     transition: 0.2s ease-in-out;
     margin: 20px;
+    
 }
 .sci a:hover {
     text-shadow:  0 0 20px #e51e2a;
     transform: translateY(-10px);
 }
-.sci a ion-icon{
-    color: #fff;
-    font-size: 30px;
-}
+
 @media (max-width:999px) {
     
     .textSobre{
