--- a/relogio.css
+++ b/relogio.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+
 .boxHorario {
   width: 100%;
   min-height: 100vh;
@@ -33,7 +35,7 @@
   width: 100%;
   height: 100px;
   color: rgb(255, 153, 0);
-  font-size: 25px;
+  font-size: 35px;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -49,7 +51,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 25px;
+  font-size: 50px;
   color: rgb(204, 204, 204);
   background: rgba(255, 145, 0, 0.637);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
@@ -78,6 +80,7 @@
   font-size: 50px;
   font-weight: 500;
   background: rgba(255, 145, 0, 0.637);
+  
 }
 .relogio span {
   background-color: aliceblue;
@@ -88,6 +91,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Monoton', cursive;
 }
 
 .funcionamento {
@@ -97,7 +101,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 35px;
+  font-size: 40px;
   background-color: rgba(0, 0, 0, 0.5);
   text-align: center;
   color: white;
